--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@
 
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 body{
     width: 100%;
     height: 100%;
@@ -83,4 +87,50 @@ header i{
     font-size: 3rem;
     text-align: center;
     margin-top: 16%;
+
+}
+
+
+
+/* SEGUNDA SECAO */
+
+#s2{
+    background-color: white;
+    color: rgba(0, 0, 0, 0.787);
+    margin-top: 14%;
+    padding: 50px;
+}
+
+#s2 h1{
+    text-decoration: underline 3px rgba(0, 0, 0, 0.787);
+    font-size: 3rem;
+    font-weight: lighter;
+}
+
+.sobre{
+    display: flex;
+    align-items: start;
+    justify-content: space-around;
+    margin-top: 3%;
+}
+
+.txtsobre{
+    width: 400px;
+    line-height: 30px;
+
+}
+
+.txtsobre button{
+    padding: 10px 50px 10px 50px;
+    background-color: transparent;
+    border: 2px rgba(0, 0, 0, 0.787) solid;
+    margin-top:40%;
+    cursor: pointer;
+    transition: all ease-in-out .2s;
+
+}
+
+.txtsobre button:hover{
+    background-color: #000;
+    color: white;
 }
