--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&family=Varela+Round&display=swap');
-*{
+
+* {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
@@ -8,11 +9,11 @@
 
 }
 
-html{
+html {
     scroll-behavior: smooth;
 }
 
-body{
+body {
     width: 100%;
     height: 100%;
     display: flex;
@@ -20,17 +21,17 @@ body{
     background-color: #000;
 }
 
-header{
+header {
     padding: 40px;
     display: flex;
     align-items: center;
     justify-content: space-around;
     color: white;
-    
+
 
 }
 
-header .barra ul{
+header .barra ul {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -40,24 +41,24 @@ header .barra ul{
     list-style: none;
 }
 
-header .barra ul a{
+header .barra ul a {
     text-decoration: none;
     color: white;
     transition: all ease-in-out .3s;
-    
+
 }
 
-header i{
+header i {
     font-size: 2.7rem;
 }
 
-.barra ul a:hover{
+.barra ul a:hover {
     transform: translateY(-5px);
 }
 
 /* PRIMEIRA SECAO*/
 
-#hero .linha{
+#hero .linha {
     color: white;
     font-size: 2.7rem;
     text-align: center;
@@ -66,24 +67,24 @@ header i{
     justify-content: center;
     margin-top: 14%;
     gap: 30px;
-   
+
 }
 
-#hero i{
+#hero i {
     font-size: 9rem;
 
 }
 
-#hero .nomemarca p{
+#hero .nomemarca p {
     text-align: left;
     border-bottom: white 3px solid;
     font-family: "Space Grotesk", sans-serif;
 
 
-       
+
 }
 
-.seta{
+.seta {
     font-size: 3rem;
     text-align: center;
     margin-top: 16%;
@@ -94,43 +95,77 @@ header i{
 
 /* SEGUNDA SECAO */
 
-#s2{
+#s2 {
     background-color: white;
     color: rgba(0, 0, 0, 0.787);
     margin-top: 14%;
     padding: 50px;
 }
 
-#s2 h1{
+#s2 h1 {
     text-decoration: underline 3px rgba(0, 0, 0, 0.787);
     font-size: 3rem;
     font-weight: lighter;
 }
 
-.sobre{
+.sobre {
     display: flex;
     align-items: start;
     justify-content: space-around;
     margin-top: 3%;
 }
 
-.txtsobre{
+.txtsobre {
     width: 400px;
     line-height: 30px;
 
 }
 
-.txtsobre button{
+.txtsobre button {
     padding: 10px 50px 10px 50px;
     background-color: transparent;
     border: 2px rgba(0, 0, 0, 0.787) solid;
-    margin-top:40%;
+    margin-top: 40%;
     cursor: pointer;
     transition: all ease-in-out .2s;
 
 }
 
-.txtsobre button:hover{
+.txtsobre button:hover {
     background-color: #000;
     color: white;
 }
+
+/* TERCEIRA SECAO */
+
+#s3 {
+    background-color: white;
+    color: black;
+    padding: 50px;
+    text-transform: uppercase;
+    margin-top: 5%;
+}
+
+#cards{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+ 
+    
+}
+
+.card{
+    text-align: center;
+    width:auto;
+
+}
+
+.card h2{
+    margin-bottom: 70px;
+}
+
+.card p{
+    margin-top: 50px;
+}
+
